# autonima-results

./: .gitignore  pyproject.toml
analysis/: compare_meta.ipynb  comparison_summary.csv
projects/cue_reactivity/: v1.yaml
scripts/: README_qualitative_review.md  ace_get_unavailable.py  ace_ingest_and_export.py  compare_final_to_meta.py  generate_annotation_review_reports.py  generic_rdoc_annotation_table.py  qualitative_review_tool.py  run_fuzzy_analysis_matching.py  test_generic_table_link_detection.py  validate_studies.py
social-processing/: all_pmids.txt  liberal.txt  official.txt  unofficial.txt
social-processing-coordinate/: config.yaml  meta_pmids.txt
social-processing-coordinate-test/: config.yaml
social-processing-coordinate-test/outputs/: annotation_crosstab_matrix.csv  annotation_distribution_summary.csv  nimads_annotation.json  raw_annotations.csv
social-processing-coordinate/evaluation/: performance_metrics.csv  performance_metrics.json  study_classifications.json
social-processing-coordinate/outputs/: abstract_screening_results.json  annotation_crosstab_matrix.csv  annotation_distribution_summary.csv  annotation_results.json  coordinate_parsing_results.json  final_results.json  fulltext_retrieval_results.json  fulltext_screening_results.json  nimads_annotation.json  nimads_studyset.json  raw_annotations.csv  search_results.json  unavailable_fulltexts.txt
social-processing-coordinate/rev2-all_pmids/: config.yaml
social-processing/analysis/: evaluation.ipynb
social-processing/nt-rev1/: config.yaml
social-processing/nt-rev2/: config.yaml
(+437 files in other folders)
