[project]
authors = [{name = "Alejandro de la Vega", email = "aleph4@gmail.com"}]
dependencies = ["beautifulsoup4>=4.14.2,<5", "lxml>=6.0.2,<7", "regex>=2025.10.23,<2026", "requests>=2.32.5,<3", "simplejson", "sqlalchemy", "selenium>=4.37.0,<5", "seleniumbase>=4.43.1,<5", "tqdm>=4.67.1,<5", "xmltodict>=1.0.2,<2"]
name = "autonima-results"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
autonima_results = { path = ".", editable = true }
autonima = { path = '../autonima', editable = true }
ace = { path = '../ACE', editable = true }
pubget = { path = '../pubget', editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
sqlalchemy = ">=2.0.44,<3"
simplejson = ">=3.20.2,<4"
readabilipy = ">=0.3.0,<0.4"
nodejs = ">=24.9.0,<24.10"
openai = ">=2.6.0,<3"
joblib = "==1.1.1"
nilearn = ">=0.10.4,<0.11"
numpy = "==1.25.2"
scipy = "==1.10.1"
scikit-learn = "==1.2.2"
ipython = ">=9.6.0,<10"
ipykernel = ">=7.1.0,<8"
pip = ">=25.2,<26"
